--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@firebase/auth": "^0.23.2",
-    "@react-native-async-storage/async-storage": "^1.18.1",
+    "@react-native-async-storage/async-storage": "github:react-native-async-storage/async-storage",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -23,6 +23,7 @@
     "react-native-image-resizer": "^1.4.5",
     "react-native-paper": "^5.8.0",
     "react-native-photo-upload": "^1.3.0",
+    "react-native-reanimated": "^3.2.0",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
     "react-native-vector-icons": "^9.2.0"
